corrected alignment

--- a/src/components/Table/table.module.css
+++ b/src/components/Table/table.module.css
@@ -122,8 +122,11 @@
     display: flex;
     align-items: center;
     & p{
+        width: fit-content;
         position: relative;
         cursor: pointer;
+        display: flex;
+        align-items: center;
         flex-grow: 1;
         margin-right:32px;
         border: 1px solid #EBEBEB;
